# indielinks

./: .dir-locals.el  .gitignore  Cargo.toml  HACKING.org  INSTALL.org  NEWS  README.org  THANKS  rustfmt.toml
.github/workflows/: ci.yaml
admin/: Dockerfile-debian-packaging  build-and-test-debian-package  build-and-test-debian-package-in-container  cargo-build-test-smoke  cargo-test-bugfix  cargo-test-front-end  cargo-test-pre-alpha  check-dependencies  compose.debian-packaging.yaml  create-stack  local-install  proto-install  run-linters  signoff  topsort
admin/deb-maintainer-scripts/: postinst
admin/debian/: .gitignore  .terraform.lock.hcl  Dockerfile  README.org  build-and-test-debian-package-sysv  cleanup-aws  compose.yaml  debian-packaging.yaml  local-install-archaic-driver  local-install-archaic.yaml  main.tofu  systemd-driver  sysv-driver  test-debian-package-systemd  test-local-install-archaic
conf/: alternator-backend.ncl  indielinks-deb.toml  indielinksd-alternator-0.toml  indielinksd-alternator-1.toml  indielinksd-alternator-2.toml  indielinksd-alternator-3.toml  indielinksd-alternator-4.toml  indielinksd-alternator-indiepin.net.toml  indielinksd-alternator-secure.toml  indielinksd-alternator-stunnel.toml  indielinksd-alternator.toml  indielinksd-bugfix-alternator.toml  indielinksd-bugfix-scylla.toml  indielinksd-cluster-alternator.ncl  indielinksd-cluster-scylla.ncl  indielinksd-common.ncl  indielinksd-front-end-alternator.toml  indielinksd-front-end-scylla.toml  indielinksd-front-matter-clustered.ncl  indielinksd-front-matter.ncl  indielinksd-pre-alpha-alternator.toml  indielinksd-pre-alpha-scylla.toml  indielinksd-scylla-0.toml  indielinksd-scylla-1.toml  indielinksd-scylla-2.toml  indielinksd-scylla-3.toml  indielinksd-scylla-4.toml  indielinksd-scylla-local.toml  indielinksd-scylla.toml  indielinksd-single-node-alternator.ncl  indielinksd-single-node-scylla.ncl  mk-stack.ncl  peppers.ncl  scylla-backend.ncl  stacks.ncl
conf/bugfix/: indielinksd-alternator-0.toml  indielinksd-alternator-1.toml  indielinksd-alternator-2.toml  indielinksd-alternator-3.toml  indielinksd-alternator-4.toml  indielinksd-scylla-0.toml  indielinksd-scylla-1.toml  (+3 more)
indielinks/: .gitignore  Cargo.toml  build.rs  indielinks-deps.neato  local-indielinks.toml  proto-indielinks.toml
indielinks-cache/: Cargo.toml  exercise-cluster
indielinks-cache-test/: Cargo.toml  exercise-cluster  exercise-in-memory  exercise-on-disk
indielinks-cache-test/admin/: exercise-in-memory
indielinks-cache-test/src/: lib.rs
indielinks-cache-test/tests/: in-memory.rs  on-disk.rs  single-node.rs
indielinks-cache-test/tests/common/: mod.rs  smoke.rs
indielinks-cache/src/: _docs.rs  cache.rs  lib.rs  network.rs  raft.rs  types.rs
indielinks-client/: Cargo.toml  onetab.txt  ot2
indielinks-client/src/: add-link.rs  add-user.rs  import-onetab.rs  import-pinboard.rs  import.rs  lib.rs  main.rs  service.rs
indielinks-fe/: .dir-locals.el  .gitignore  Cargo.toml  README.org  index.html  style.css  tailwind.config.js
indielinks-fe/src/: add-link.rs  feeds.rs  home.rs  http.rs  instance.rs  lib.rs  main.rs  personal.rs  signin.rs  types.rs
indielinks-fe/src/components/: dropdown.rs  mod.rs  post.rs  view-post.rs
indielinks-shared/: Cargo.toml
indielinks-shared/src/: api.rs  entities.rs  fin.rs  instance-state.rs  lib.rs  nonempty-string.rs  origin.rs  service.rs
indielinks-test/: Cargo.toml  haproxy-3-nodes.conf  haproxy-5-nodes.conf  indielinks-alternator-0.toml  indielinks-alternator-1.toml  indielinks-alternator-2.toml  indielinks-alternator-3.toml  indielinks-alternator-4.toml  indielinks-alternator-indiepin.net.toml  indielinks-alternator.toml  indielinks-scylla-0.toml  indielinks-scylla-1.toml  indielinks-scylla-2.toml  indielinks-scylla-3.toml  indielinks-scylla-4.toml  indielinks-scylla-local.toml  indielinks-scylla.toml  indielinks-test-dev.toml  indielinks-test.toml  indielinksd-alternator-0.toml  indielinksd-alternator-1.toml  indielinksd-alternator-2.toml  indielinksd-alternator-3.toml  indielinksd-alternator-4.toml  indielinksd-alternator.toml  indielinksd-scylla-0.toml  indielinksd-scylla-1.toml  indielinksd-scylla-2.toml  indielinksd-scylla-3.toml  indielinksd-scylla-4.toml  indielinksd-scylla.toml
indielinks-test/src/: activity-pub.rs  background.rs  cache.rs  delicious.rs  follow.rs  lib.rs  user.rs  users.rs  webfinger.rs
indielinks-test/tests/: background-alternator.rs  background-scylla.rs  cache-alternator.rs  cache-scylla.rs  cache-tests.rs  delicious-alternator.rs  delicious-scylla.rs  delicious.rs  dev-charge.cql  smoke-alternator.rs  smoke-scylla.rs
indielinks-test/tests/common/: mod.rs
indielinks/proto/: indielinks.proto
indielinks/schemas/: 0.cql  1.cql  2.cql  3.cql
indielinks/src/: _docs.rs  acct.rs  activity-pub.rs  actor.rs  ap-entities.rs  ap-resolution.rs  app-logic.rs  authn.rs  background-tasks.rs  bookmarklets.rs  cache.rs  client-types.rs  client.rs  delicious.rs  dynamodb-schemas.rs  dynamodb.rs  entities.rs  grpc.rs  home-timeline.rs  http.rs  indielinks.rs  lib.rs  metrics-task.rs  metrics.rs  ops.rs  origin.rs  outboxes.rs  peppers.rs  popular-items.rs  protobuf-interop.rs  recent-posts-lists.rs  sanitized-html.rs  scylla.rs  signing-keys.rs  storage.rs  token.rs  user.rs  users.rs  util.rs  webfinger.rs
infra/: .gitignore  add-some-test-posts  bugfix.env  cache-test-cluster-down  cache-test-cluster-up  compose.local.yaml  dev-charge.cql  front-end.env  indielinks-cluster-down  indielinks-cluster-up  indielinks-down  indielinks-up  indielinks.cql  indiemark.local-key.pem  indiemark.local.pem  pre-alpha.env  scylla-down  scylla-up  single-node-cluster-down  single-node-cluster-up  stunnel-down  stunnel-up  stunnel.conf
scripts/: indielinks-ctl  indielinks-post-install
tests-indielinks/: Cargo.toml  build.rs  indielinks-test-dev.toml  indielinks-test.toml
tests-indielinks-cache/: Cargo.toml  build.rs  indielinks-cache-test.toml
tests-support/: Cargo.toml
tests-support/src/: lib.rs
tests-support/tests/: trivial.rs
(+92 files in other folders)
