[package]
name = "indielinks-cache-test"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
bpaf = { version = "0.9.20", features = ["bright-color"] }
http = "1.3.1"
indielinks-cache = { path = "../indielinks-cache" }
itertools = "0.14.0"
libtest-mimic = "0.8.1"
openraft = { version = "0.9.18", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = { version = "0.8.6", features = ["backtrace"] }
tap = "1.0.1"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter"] }

[dev-dependencies]
inventory = "0.3.20"
reqwest = "0.12.19"
toml = "0.8.23"

[[test]]
name = "in-memory"
harness = false

[[test]]
name = "on-disk"
harness = false

[[test]]
name = "single-node"
harness = false
