[package]
name = "indielinks-cache"
version = "0.0.1"
edition = "2024"

[dependencies]
openraft = { version = "0.9.18", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12.18", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
snafu = { version = "0.8.5", features = ["backtrace"] }
tap = "1.0.1"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
