[package]
name = "indielinks-cache"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.45"
indielinks-shared = { path = "../indielinks-shared" }
itertools = "0.14.0"
lru = "0.14.0"
non-zero = "0.2.0"
nonempty-collections = { version = "1.3.0", features = ["serde"] }
nonzero = "0.2.0"
openraft = { version = "0.9.20", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12.18", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
snafu = { version = "0.8.5", features = ["backtrace"] }
tap = "1.0.1"
tokio = { version = "1.45.1", features = ["time"] }
tracing = "0.1.41"
typenum = "1.20.1"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
