[package]
name = "indielinks-fe"
version = "0.0.1"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_router = "0.8.2"
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thaw = { path = "../../thaw/thaw", features = ["csr"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
