[package]
name = "indielinks-shared"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5.0"
regex = "1.11.1"
scylla = { version = "1.1.0", features = ["full-serialization"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
snafu = { version = "0.8.6", features = ["backtrace"] }
tap = "1.0.1"
unicode-segmentation = "1.12.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[features]
default = []

backend = ["scylla"]
