[package]
name = "indielinks-test"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.64.0"
aws-smithy-runtime-api = { version = "1.7.3", features = ["client"] }
chrono = "0.4.39"
either = { version = "1.13.0", features = ["serde"] }
futures = "0.3.31"
indielinks = { path = "../indielinks" }
inventory = "0.3.17"
itertools = "0.14.0"
lazy_static = "1.5.0"
libtest-mimic = "0.8.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
scylla = { version = "0.15.1", features = ["chrono-04"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_dynamo = "4.2.14"
serde_json = "1.0.138"
serde_toml = "0.0.1"
snafu = { version = "0.8.5", features = ["backtrace"] }
tap = "1.0.1"
tokio = { version = "1.43.0", features = ["rt"] }
toml = "0.8.19"

[[test]]
name = "delicious-alternator"
harness = false

[[test]]
name = "delicious-scylla"
harness = false
