[package]
name = "indielinks"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.57.0"
aws-smithy-runtime-api = { version = "1.7.3", features = ["client"] }
axum = { version = "0.8.1", features = ["macros", "tracing"] }
axum-extra = { version = "0.10.0", features = ["query"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["cargo", "env"] }
either = { version = "1.13.0", features = ["serde"] }
enum-map = "2.7.3"
errno = "0.3.10"
futures = "0.3.31"
hex = "0.4.3"
http-serde = "2.1.1"
inventory = "0.3.19"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.169"
opentelemetry = "0.27.1"
opentelemetry-prometheus = "0.27.0"
opentelemetry_sdk = "0.27.1"
picky = "6.3.0"
prometheus = "0.13.4"
regex = "1.11.1"
scylla = { version = "0.15.1", features = ["chrono-04"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = { version = "0.11.15", features = ["alloc"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
snafu = "0.8.5"
tap = "1.0.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal", "sync"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["auth", "cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }
