[package]
name = "indielinks"
version = "0.0.1"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
async-trait = "0.1.83"
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.57.0"
aws-smithy-async = { version = "1.2.5", features = ["rt-tokio"] }
aws-smithy-runtime-api = { version = "1.7.3", features = ["client"] }
axum = { version = "0.8.1", features = ["macros", "tracing"] }
axum-extra = { version = "0.10.0", features = ["cookie", "query", "typed-header"] }
base64 = "0.22.1"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["cargo", "env"] }
crypto-common = "0.1.6"
either = { version = "1.13.0", features = ["serde"] }
enum-map = "2.7.3"
errno = "0.3.10"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
home = "0.5.11"
http = "1.2.0"
http-serde = "2.1.1"
indielinks-cache = { path = "../indielinks-cache" }
indielinks-shared = { path = "../indielinks-shared", features = ["backend"] }
inventory = "0.3.19"
itertools = "0.13.0"
jwt = "0.16.0"
lazy_static = "1.5.0"
libc = "0.2.169"
num-bigint = { version = "0.3.3", features = ["serde"] }
openraft = { version = "0.9.20", features = ["serde", "storage-v2"] }
opentelemetry = "0.27.1"
opentelemetry-prometheus = "0.27.0"
opentelemetry_sdk = "0.27.1"
password-hash = "0.5.0"
pct-str = "2.0.0"
picky = "7.0.0-rc.16"
pin-project = "1.1.10"
pkcs8 = "0.10.2"
prometheus = "0.13.4"
prost = "0.13.5"
rand = "0.8.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
rmp-serde = "1.3.0"
rsa = "0.9.7"
scylla = { version = "1.1.0", features = ["full-serialization"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = { version = "0.11.15", features = ["alloc"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.139"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
snafu = "0.8.5"
tap = "1.0.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal", "sync"] }
toml = "0.8.19"
tonic = "0.13.1"
tower = { version = "0.5.2", features = ["retry"] }
tower-http = { version = "0.6.2", features = ["auth", "cors", "request-id", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }
zxcvbn = "3.1.0"

[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.13.1"
